downgrade java and add some unit test for controller class